# modelsLib

ccdlib/ccd-build/: ALL_BUILD.vcxproj  CTestTestfile.cmake  INSTALL.vcxproj.filters  libccd.sln
ccdlib/ccd-build/src/: CTestTestfile.cmake  ccd.vcxproj.filters
ccdlib/ccd-build/src/ccd.dir/Release/ccd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  ccd.lastbuildstate
ccdlib/ccd-build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
ccdlib/ccd-build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ccdlib/ccd-src/: CMakeLists copy.txt  CMakeLists.txt
ccdlib/ccd-src/src/: CMakeLists.txt  alloc.h  list.h  polytope.h  simplex.h  support.h
ccdlib/ccd-src/src/ccd/: ccd.h  quat.h  vec3.h
ccdlib/ccd-src/src/testsuites/: support.h
ccdlib/ccd-src/src/testsuites/cu/: cu.h
ccdlib/ccd-subbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ccd-populate.sln  ccd-populate.vcxproj  ccd-populate.vcxproj.filters  cmake_install.cmake
ccdlib/ccd-subbuild/ccd-populate-prefix/src/ccd-populate-stamp/: ccd-populate-gitinfo.txt
ccdlib/ccd-subbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
ccdlib/ccd-subbuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ccdlib/ccd-subbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
ccdlib/ccd-subbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ccdlib/ccd-subbuild/x64/Debug/ccd-populate/: ccd-populate.recipe
ccdlib/ccd-subbuild/x64/Debug/ccd-populate/ccd-populate.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
libBUildSep/lodepng-master/lodepng-master/: CMakeLists.txt
libBUildSep/qhulpackageRef/qhull-build/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  RUN_TESTS.vcxproj  libqhull.vcxproj  libqhull.vcxproj.filters  qconvex.vcxproj.filters  qhalf.vcxproj  qhull.sln  qhull.vcxproj.filters  qhull_p.vcxproj  qhull_r.vcxproj.filters  qhullcpp.vcxproj.filters  qhullp.vcxproj  qhullp.vcxproj.filters  qhullstatic_r.vcxproj.filters  qvoronoi.vcxproj  rbox.vcxproj  rbox.vcxproj.filters  testqset_r.vcxproj  uninstall.vcxproj  uninstall.vcxproj.filters  user_eg.vcxproj  user_eg.vcxproj.filters  user_eg3.vcxproj.filters  user_egp.vcxproj
libBUildSep/qhulpackageRef/qhull-build/QhullExport/: QhullTargets.cmake
libBUildSep/qhulpackageRef/qhull-build/qhullstatic_r.dir/Release/: qhullstatic_r.lib.recipe
libBUildSep/qhulpackageRef/qhull-build/qhullstatic_r.dir/Release/qhullstatic_r.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  qhullstatic_r.lastbuildstate
libBUildSep/qhulpackageRef/qhull-subbuild/: CMakeLists.txt  ZERO_CHECK.vcxproj  cmake_install.cmake  qhull-populate.vcxproj.filters
libBUildSep/qhulpackageRef/qhull-subbuild/qhull-populate-prefix/tmp/: qhull-populate-mkdirs.cmake
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/qhull-populate/: qhull-populate.recipe
libBUildSep/qhulpackageRef/qhull-subbuild/x64/Debug/qhull-populate/qhull-populate.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
libBUildSep/tinyx/tinyxml2-build/: ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Nightly.vcxproj.filters  RUN_TESTS.vcxproj.filters
libBUildSep/tinyx/tinyxml2-build/tinyxml2.dir/Release/tinyxml2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
libBUildSep/tinyx/tinyxml2-build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
libBUildSep/tinyx/tinyxml2-build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
libBUildSep/tinyx/tinyxml2-src/: CMakeLists.txt  tinyxml2.h
libBUildSep/tinyx/tinyxml2-subbuild/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj.filters  tinyxml2-populate.sln
libBUildSep/tinyx/tinyxml2-subbuild/tinyxml2-populate-prefix/src/tinyxml2-populate-stamp/: tinyxml2-populate-update-info.txt
libBUildSep/tinyx/tinyxml2-subbuild/tinyxml2-populate-prefix/tmp/: tinyxml2-populate-gitclone.cmake  tinyxml2-populate-mkdirs.cmake
libBUildSep/tinyx/tinyxml2-subbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
libBUildSep/tinyx/tinyxml2-subbuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
libBUildSep/tinyx/tinyxml2-subbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
libBUildSep/tinyx/tinyxml2-subbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  (+1 more)
libBUildSep/tinyx/tinyxml2-subbuild/x64/Debug/tinyxml2-populate/: tinyxml2-populate.recipe
mujocoCmake/: CMakeLists.txt
mujocoCmake/mjDll1/: mjDll1.vcxproj  mjDll1.vcxproj.filters
mujocoCmake/mjDll1/include/mujoco/: mjexport.h
mujocoCmake/mjDll1/lib/Release - CopyW/: ccd.lib  glfw3.lib  libsimulate.lib  lodepng.lib  mujoco.exp  mujoco.lib  qhullstatic_r.lib  tinyobjloader.lib  tinyxml2.lib
mujocoCmake/mjDll1/src/engine/: engine_crossplatform.h  engine_util_errmem.c
mujocoCmake/mjDll1/src/xml/: xml_native_writer.cc
(+3 files in other folders)
